# config-setup-python

./: README.md  config_setup.py  pyproject.toml
